Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54191

Null pointer reference if signals stacked on QComboBox

    XMLWordPrintable

Details

    Description

      If 2 or more signals from QComboBox are connected to a slot (or slots) and the first slot to fire changes the combo box from editable to non-editable it causes a null pointer reference within the Qt libs.

      I've attached a simplified example that reproduces the error. The example does not represent how things are being done in the real application, it's just an easy way to reproduce the crash.

      Run the provided example and simply change the selected text within the combo box from "one" to "two" then back to "one". You don't need to edit the selected text when it goes editable, just change the selected text.

      Attachments

        1. qtbug54191.zip
          2 kB
        2. example.zip
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mmutz Marc Mutz
            zd3nik Shawn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes